# ctcomputeR

./: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE
.github/workflows/: release.yml
R/: extendr-wrappers.R
man/: ctcompute.Rd  ss_range.Rd
src/: Makevars.in  Makevars.win.in  ctcomputeR-win.def  entrypoint.c
src/rust/: Cargo.toml
src/rust/src/: lib.rs
