[package]
name = 'ctcomputer_helper'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.65'

[lib]
crate-type = [ 'staticlib' ]
name = 'ctcomputer_helper'

[dependencies]
extendr-api = '0.8.1'
ctcompute = { git = "https://github.com/nateosher/ctcompute", rev = "4dc0ade" }

[profile.release]
lto = true
codegen-units = 1
